Solves logo appearing issue by making the z-index of the background image negative

--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -14,7 +14,7 @@
   background-repeat: 0;
   background-size: 100%;
   background-repeat: no-repeat;
-  z-index: 0;
+  z-index: -1;
 }
 
 .Log-In-Or-Sign-Up {
